samples/_failures_safe/1761156250_9a8bc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ab275ce0.c: In function ‘main’:
./samples/SAFE/__tmp_ab275ce0.c:140:5: error: expected expression at end of input
  140 |     if (strcmp(filter_input, "ALL") ==
      |     ^~
./samples/SAFE/__tmp_ab275ce0.c:140:5: error: expected declaration or statement at end of input
